save optuna run

--- a/Hw3/ee046211_hw3_300427259.ipynb
+++ b/Hw3/ee046211_hw3_300427259.ipynb
@@ -1435,7 +1435,7 @@
         "\"\"\"\n",
         "Your Code Here\n",
         "\"\"\"\n",
-        "epochs = 10\n",
+        "epochs = 8\n",
         "emsize = 240                      # embbeding size\n",
         "ntokens = len(vocab.stoi)         # the size of vocabulary\n",
         "\n",
@@ -1447,7 +1447,7 @@
         "    nhid = trial.suggest_int(\"nhid\", 200, 250)          # number of hidden units\n",
         "    nhead = trial.suggest_int(\"nhead\", 2, 4)            # number of Attention heads\n",
         "    dropout = trial.suggest_float(\"dropout\", 0.01, 0.3) # dropout probability\n",
-        "    step_decay = trial.suggest_int(\"step_decay\", 1, 5)  # Period of learning rate decay\n",
+        "    step_decay = trial.suggest_int(\"step_decay\", 1, 4)  # Period of learning rate decay\n",
         "    gamma = trial.suggest_float(\"gamma\", 0.3, 0.95)     # decay value for learning rate\n",
         "    optimizer_name = trial.suggest_categorical(\"optimizer\", [\"Adam\", \"SGD\"]) # optimizer \n",
         "\n",
@@ -1545,7 +1545,7 @@
         "# now we can run the experiment\n",
         "sampler = optuna.samplers.TPESampler()\n",
         "study = optuna.create_study(study_name=\"LM_Transformer\", direction=\"minimize\", sampler=sampler)\n",
-        "study.optimize(objective, n_trials=70, timeout=42000)\n",
+        "study.optimize(objective, n_trials=40, timeout=42000)\n",
         "\n",
         "pruned_trials = [t for t in study.trials if t.state == optuna.trial.TrialState.PRUNED]\n",
         "complete_trials = [t for t in study.trials if t.state == optuna.trial.TrialState.COMPLETE]\n",
@@ -1623,6 +1623,17 @@
       },
       "source": [
         "optuna.visualization.plot_param_importances(study)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t5J0WZFLksFs"
+      },
+      "source": [
+        "optuna.visualization.plot_contour(study, params=[\"lr\", \"dropout\"])"
       ],
       "execution_count": null,
       "outputs": []
