--- a/Hw3/ee046211_hw3_300427259.ipynb
+++ b/Hw3/ee046211_hw3_300427259.ipynb
@@ -183,7 +183,8 @@
         "\n",
         "2. Because illnesses are not mutually exclusive, the probability of a paitient to have one illness could be (in general) independent of some other illnesses which can also accure. Using a softmax activation on the last layer would give us a probability distribution over the output vector (illnesses) such that the probability of having some illness would be on the expense of the other (which in general wouldn't be the case). For example, a paitent could torn his acl and have diarrhea at the same time without of this two ilnesses be conected in any way. Therefore, it would be better to use a sigmoid activation over the output layer which results in a mapping of any output unit into $[0, 1]$ which can be interpreted as the probability of he patient to have that specific illness.\n",
         "\n",
-        "3. "
+        "3. In order to reduce the time complexity of the model we can use the $300$ classes list as the output of the model with a sigmoid activation over each unit in the $300$ output vector. Thus, the model would (given the same input) output the probabilities of the patient to have an illness in one or more of the classes in the $300$ classes list. Then, defining some threshold for the probability of having an illness in some class we can then classify between the illnesses only for the classes who got a probability above that treshold.\n",
+        "Althogh in this method we add another classifer ontop of the previouse model (which is time consuming) we also reduce the size of the model's output dramatically to $300$ from $70000$ units. Then, given some interesting classes with high probability we now look in a much smaller subspace of illnesses which on average would be of the size of $70000/300 \\approx 230$ classes."
       ]
     },
     {
@@ -391,7 +392,7 @@
         "# Get Telegram alert to phone when training finishes\n",
         "!pip install python-telegram-bot"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -438,7 +439,7 @@
         "\n",
         "send_message('Telegram pinger is connected.')"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,7 +462,7 @@
       "source": [
         "pip install optuna"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,7 +577,7 @@
         "    device = torch.device(\"cpu\")\n",
         "    print('CPU')"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -643,7 +644,7 @@
         "    data = data.view(bsz, -1).t().contiguous()\n",
         "    return data.to(device)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -699,7 +700,7 @@
         "    print('\\n')\n",
         "\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -816,7 +817,7 @@
         "print(f\"Data:\\n {data.cpu().numpy()}\\n\")\n",
         "print(f\"Target:\\n {target.cpu().numpy()}\")"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -915,7 +916,7 @@
         "        output = self.decoder(output)\n",
         "        return output"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -985,7 +986,7 @@
         "display(HTML('<h4>The Model:</h4>'))\n",
         "print(model)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1120,7 +1121,7 @@
         "            total_loss += len(data) * criterion(output_flat, targets).item()\n",
         "    return total_loss / (len(data_source) - 1)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1171,7 +1172,7 @@
         "            start_time = time.time()\n",
         "    logger['train_loss'].append(epoch_total_loss / counter)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1239,7 +1240,7 @@
         "# send a message to my phone when training is done\n",
         "send_message('The training process of the LM_transformer is done.')"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1803,7 +1804,7 @@
         "print('| Model was saved |')\n",
         "print('-' * 89)"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1833,7 +1834,7 @@
         "    test_loss, math.exp(test_loss)))\n",
         "print('=' * 89)"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1871,7 +1872,7 @@
         "ax.xaxis.grid()\n",
         "ax.legend()"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1932,7 +1933,7 @@
         "            words.append(word)\n",
         "    return words"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1967,7 +1968,7 @@
         "  print(f'Sentence {i}:')\n",
         "  print(\" \".join(sentence), '\\n')    "
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2100,7 +2101,7 @@
         "    send_message('Trial-{} was done.\\nValidation loss: {}\\nParameters:\\n {}'.format(trial.number, val_loss, trial.params))\n",
         "    return val_loss"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2240,7 +2241,7 @@
         "# send a message to my phone when training is done\n",
         "send_message('The optuna optimization process of the LM_transformer model hypereparameters is done.')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2325,7 +2326,7 @@
       "source": [
         "optuna.visualization.plot_param_importances(study)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2401,7 +2402,7 @@
       "source": [
         "optuna.visualization.plot_contour(study, params=[\"lr\", \"dropout\"])"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2477,7 +2478,7 @@
       "source": [
         "optuna.visualization.plot_contour(study, params=[\"lr\", \"nhid\"])"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2553,7 +2554,7 @@
       "source": [
         "optuna.visualization.plot_contour(study, params=[\"dropout\", \"nhid\"])"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2629,7 +2630,7 @@
       "source": [
         "optuna.visualization.plot_contour(study, params=[\"lr\", \"gamma\"])"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2705,7 +2706,7 @@
       "source": [
         "optuna.visualization.plot_contour(study, params=[\"gamma\", \"dropout\"])"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2781,7 +2782,7 @@
       "source": [
         "optuna.visualization.plot_contour(study, params=[\"gamma\", \"nhid\"])"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
